@@ -73,6 +73,7 @@ All (GUI):
 - Allow access to the currently shown wxInfoBar buttons (Hanmac).
 - Add wxGenericListCtrl::EndEditLabel() (Tim Kosse).
 - Use native renderer for drawing check boxes in wxPropertyGrid (Eran Ifrah).
+- Fix drawing custom colours of wxEnumProperty items in wxPG (Artur Wieczorek).
 
 wxGTK:
 
